--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=حاوية (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=هل تريد ترك هذا الموقع؟ قد لا يتم حفظ التغييرات التي أجريتها. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=عرض ثابت (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=لا يوجد نوع الأصول المحددة (Automat
 not-translated=لم تترجم (Automatic Translation)
 padding-horizontal=الحشو ح (Automatic Translation)
 padding-vertical=الحشو الخامس (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=حفظ التغييرات... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=قسم (Automatic Translation)
