--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_bg.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Контейнер (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Искате ли да излезете от този сайт? Направени от вас промени не могат да бъдат записани. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Фиксирана ширина (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Избрания тип не актив (Automatic Transl
 not-translated=Не са преведени (Automatic Translation)
 padding-horizontal=Запълване H (Automatic Translation)
 padding-vertical=Подложка V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Записване на промени... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Раздел (Automatic Translation)
