--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Contenidor (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Voleu abandonar aquest lloc? Canvis que hàgiu fet no pot ser salvat. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Amplada fixa (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Cap tipus d'actius seleccionats (Automatic Translation)
 not-translated=No traduït (Automatic Translation)
 padding-horizontal=Farciment H (Automatic Translation)
 padding-vertical=Farciment V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Si deseu els canvis... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Secció (Automatic Translation)
