--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_cs.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Kontejner (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Chcete opustit tento web? Provedené změny nebudou uloženy. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Pevná šířka (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Žádný typ majetku, který je vybrán (Automatic Transl
 not-translated=Není přeloženo (Automatic Translation)
 padding-horizontal=Odsazení obsahu H (Automatic Translation)
 padding-vertical=Odsazení V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Ukládání změn... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Sekce (Automatic Translation)
