--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_el.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_el.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Κοντέινερ (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Θέλετε να εγκαταλείψετε αυτήν την τοποθεσία; Αλλαγές που έχετε κάνει ενδέχεται να μην αποθηκευτούν. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Σταθερό πλάτος (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Καμία επιλογή τύπου περιουσιακ
 not-translated=Δεν μεταφράζονται (Automatic Translation)
 padding-horizontal=Αναπλήρωση H (Automatic Translation)
 padding-vertical=Αναπλήρωση V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Αποθήκευση των αλλαγών... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Ενότητα (Automatic Translation)
