--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Envase (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=¿Desea salir de este sitio? No pueden guardarse los cambios realizados. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Ancho fijo (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Ningún tipo de activos seleccionado (Automatic Translati
 not-translated=No traducido (Automatic Translation)
 padding-horizontal=Relleno H (Automatic Translation)
 padding-vertical=Relleno V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Guardar los cambios... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Sección (Automatic Translation)
