--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_et.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_et.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Konteiner (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Kas soovite selle saidi lahkuda? Tehtud muudatusi ei salvestata. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Kindla laiusega (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Vara tüüpi pole valitud (Automatic Translation)
 not-translated=Tõlgitud (Automatic Translation)
 padding-horizontal=Polstri H (Automatic Translation)
 padding-vertical=Polstri V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Muudatused... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Lõik (Automatic Translation)
