--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=ظرف (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=آیا مایلید که این سایت را ترک تغییرات شما ذخیره شده ممکن است. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=پهنای ثابت (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=هیچ نوع دارایی انتخاب (Automatic Transl
 not-translated=ترجمه نشده است (Automatic Translation)
 padding-horizontal=بالشتک H (Automatic Translation)
 padding-vertical=بالشتک V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=ذخیره تغییرات... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=بخش (Automatic Translation)
