--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Conteneur (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Vous voulez quitter ce site ? Les modifications apportées ne peuvent pas être enregistrées. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Largeur fixe (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Aucun Type d'actifs sélectionné (Automatic Translation)
 not-translated=Non traduit (Automatic Translation)
 padding-horizontal=Rembourrage H (Automatic Translation)
 padding-vertical=Rembourrage V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Enregistrer les modifications... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Section (Automatic Translation)
