--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hi_IN.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=कंटेनर (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=क्या आप इस साइट को छोड़ना चाहते हैं? आपके द्वारा किए गए परिवर्तन सहेजे नहीं जा सकते । (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=निश्चित चौड़ाई (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=कोई संपत्ति प्रकार चय
 not-translated=अनुवादित नहीं (Automatic Translation)
 padding-horizontal=गद्दी H (Automatic Translation)
 padding-vertical=गद्दी V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=परिवर्तन सहेज रहा है.. । (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=अनुभाग (Automatic Translation)
