--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Konténer (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Szeretné, hogy hagyja ezt a webhelyet? Végrehajtott módosítások nem menthetők. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Rögzített szélességű (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Nincs kijelölt eszköz típusa (Automatic Translation)
 not-translated=Nem lefordított (Automatic Translation)
 padding-horizontal=Padding H (Automatic Translation)
 padding-vertical=Tömítéseket V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Módosítások mentése... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Szakasz (Automatic Translation)
