--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_in.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_in.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Kontainer (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Apakah Anda ingin meninggalkan situs ini? Perubahan yang Anda buat tidak akan disimpan. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Tetap lebar (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Tidak ada tipe aset yang dipilih (Automatic Translation)
 not-translated=Tidak diterjemahkan (Automatic Translation)
 padding-horizontal=Padding H (Automatic Translation)
 padding-vertical=Padding V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Menyimpan perubahan... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Bagian (Automatic Translation)
