--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Contenitore (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Vuoi uscire da questo sito? Modifiche apportate non vengano salvate. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Larghezza fissa (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Nessun tipo di Asset selezionato (Automatic Translation)
 not-translated=Non tradotto (Automatic Translation)
 padding-horizontal=Imbottitura H (Automatic Translation)
 padding-vertical=Imbottitura V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Salvare le modifiche... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Sezione (Automatic Translation)
