--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=מיכל (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=האם ברצונך להשאיר את האתר הזה? השינויים שביצעת עשויים לא יישמרו. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=רוחב קבוע (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=נבחר את סוג הנכס אין (Automatic Translati
 not-translated=לא לתרגם (Automatic Translation)
 padding-horizontal=ריפוד H (Automatic Translation)
 padding-vertical=ריפוד V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=שמירת שינויים... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=סעיף (Automatic Translation)
