--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ko.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=컨테이너 (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=당신은이 사이트를 떠나 시겠습니까? 변경 내용을 저장할 수 없습니다 수 있습니다. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=고정된 폭 (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=아무 자산 종류 선택 (Automatic Translation)
 not-translated=변환 되지 않음 (Automatic Translation)
 padding-horizontal=패딩 H (Automatic Translation)
 padding-vertical=패딩 V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=변경 내용을 저장... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=섹션 (Automatic Translation)
