--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Konteineris (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Ar norite palikti šią svetainę? Keitimų įrašyti negalima. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Fiksuoto pločio (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Nepasirinktas turto tipas (Automatic Translation)
 not-translated=Vertimas (Automatic Translation)
 padding-horizontal=Užpildymas H (Automatic Translation)
 padding-vertical=Apdaila V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Išsaugoti pakeitimus... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Skyriuje (Automatic Translation)
