--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Beholder (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Vil du forlate denne siden? Endringene kan ikke lagres. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Fast bredde (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Ingen Gjenstandstype valgt (Automatic Translation)
 not-translated=Ikke oversatt (Automatic Translation)
 padding-horizontal=Utfylling H (Automatic Translation)
 padding-vertical=Utfylling V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Lagrer endringer... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Delen (Automatic Translation)
