--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Kontener (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Czy chcesz opuścić Tę stronę? Wprowadzone zmiany nie mogą zostać zapisane. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Stała szerokość (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Nie ma wybranego typu Asset (Automatic Translation)
 not-translated=Nie przetłumaczone (Automatic Translation)
 padding-horizontal=Dopełnienie H (Automatic Translation)
 padding-vertical=Dopełnienie V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Zapisywanie zmian... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Sekcja (Automatic Translation)
