--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Contêiner (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Você quer deixar este site? As alterações feitas não poderão ser salvas. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Largura fixa (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Nenhum tipo de ativo selecionado (Automatic Translation)
 not-translated=Não traduzidas (Automatic Translation)
 padding-horizontal=Preenchimento de H (Automatic Translation)
 padding-vertical=Preenchimento V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Salvar as alterações... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Seção (Automatic Translation)
