--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_PT.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Container (Automatic Copy)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Do you want to leave this site? Changes you made may not be saved. (Automatic Copy)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Largura fixa (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=No Asset Type Selected (Automatic Copy)
 not-translated=Not translated (Automatic Copy)
 padding-horizontal=Padding H (Automatic Copy)
 padding-vertical=Padding V (Automatic Copy)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Saving changes... (Automatic Copy)
 secondary=Secondary (Automatic Copy)
 section=Section (Automatic Copy)
