--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ro.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Container (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Vrei să părăsească acest site? Modificările efectuate nu poate fi salvat. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Lăţime fixă (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Nici un tip de active selectate (Automatic Translation)
 not-translated=Nu tradus (Automatic Translation)
 padding-horizontal=Umplutură H (Automatic Translation)
 padding-vertical=Umplutură V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Salvarea modificărilor... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Secţiunea (Automatic Translation)
