--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Контейнер (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Вы хотите оставить этот сайт? Сделанные изменения не могут быть сохранены. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Фиксированная ширина (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Не выбран тип актива (Automatic Translat
 not-translated=Не переведено (Automatic Translation)
 padding-horizontal=Заполнение H (Automatic Translation)
 padding-vertical=Заполнение V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Сохранение изменений... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Раздел (Automatic Translation)
