--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sk.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Kontajner (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Chcete opustiť túto stránku? Vykonané zmeny sa neuložia. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Pevná šírka (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Vybratý typ žiadny majetok (Automatic Translation)
 not-translated=Nie sú preložené (Automatic Translation)
 padding-horizontal=Polstrovanie H (Automatic Translation)
 padding-vertical=Čalúnenie V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Uloženie zmien... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Sekcia (Automatic Translation)
