--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Posodo (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Ali želite zapustiti to stran? Spremembe morda ne bodo shranjene. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Nespremenljiva širina (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Brez sredstev za vrsto izbrane (Automatic Translation)
 not-translated=Prevedeno (Automatic Translation)
 padding-horizontal=Oblazinjenje H (Automatic Translation)
 padding-vertical=Oblazinjenje V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Zimski... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Oddelek (Automatic Translation)
