--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_th.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_th.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=คอนเทนเนอร์ (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=คุณต้องออกจากไซต์นี้ ไม่สามารถบันทึกการเปลี่ยนแปลงที่คุณทำ (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=ความกว้างคงที่ (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=ชนิดไม่มีสินทรัพย์ท
 not-translated=ไม่แปล (Automatic Translation)
 padding-horizontal=ระยะห่าง H (Automatic Translation)
 padding-vertical=ขยาย V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=บันทึกการเปลี่ยนแปลง... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=ส่วน (Automatic Translation)
