--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Konteyner (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Bu siteyi terk istiyor musunuz? Yaptığınız değişiklikler kaydedilmemiş olabilir. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Sabit genişliği (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Seçili hiçbir kıymet türü (Automatic Translation)
 not-translated=Tercüme değil (Automatic Translation)
 padding-horizontal=Doldurma H (Automatic Translation)
 padding-vertical=Doldurma V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Değişiklikleri kaydediliyor... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Bölüm (Automatic Translation)
