--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_uk.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Контейнер (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Ви хочете, щоб залишити цей сайт? Внесені зміни можуть не зберегтися. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Фіксована ширина (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Не вибраний тип активу (Automatic Tran
 not-translated=Не перевівши (Automatic Translation)
 padding-horizontal=Заповнення H (Automatic Translation)
 padding-vertical=Оббивка V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Збереження змін... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Розділ (Automatic Translation)
