--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_vi.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Container (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Bạn có muốn để lại trang web này? Bạn thực hiện thay đổi này có thể không được lưu. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=Chiều rộng cố định (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=Không có loại tài sản đã chọn (Automatic Trans
 not-translated=Không được dịch (Automatic Translation)
 padding-horizontal=Padding H (Automatic Translation)
 padding-vertical=Padding V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Lưu thay đổi... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Phần (Automatic Translation)
