--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
@@ -5,6 +5,7 @@ changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=容器 (Automatic Translation)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=你想离开这个网站吗？您所做的更改可能不会保存。 (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 experience=Experience (Automatic Copy)
 experience-name=Experience Name (Automatic Copy)
 fixed-width=固定宽度 (Automatic Translation)
@@ -18,6 +19,7 @@ no-asset-type-selected=未选择任何资产类型 (Automatic Translation)
 not-translated=未翻译 (Automatic Translation)
 padding-horizontal=填充 h (Automatic Translation)
 padding-vertical=填充 v (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=正在保存更改..。 (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=部分 (Automatic Translation)
